# claude_hibrido_sdk

./: .gitignore  .mcp.json  deploy.sh
backend-ai/: app.py  crm_orchestrator.py  mcp_crm.py  mcp_data_api.py  mcp_nanda_api.py  nanda.db-info  populate_db.py  populate_mentoria.py  pyproject.toml  requirements.txt  schema_based_chat.py  start_server.sh  web_scraper_tool.py
backend-ai/.agentfs/: user-0.db-shm  user-2.db-shm  user-99.db-wal
backend-ai/core/: __init__.py  admin_level_service.py  agentfs_client.py  agentfs_manager.py  agents.py  auth.py  config_manager.py  crm_agent_orchestrator.py  embeddings.py  evolution_service.py  hooks.py  llm_provider.py  logging_config.py  roles.py  session_manager.py  tenant_service.py  turso_database.py  vector_search.py
backend-ai/core/database/: __init__.py  connection_pool.py
backend-ai/migrations/: 002_database_improvements.py  004_tenant_config.py  005_agnostic_config.py  006_evolution_stages.py  007_admin_levels.py  run_migrations.py
backend-ai/models/: __init__.py  analysis_models.py  diagnosis_models.py  user_models.py
backend-ai/routes/: admin_config_routes.py  auth_routes.py  chat_routes.py  config_routes.py  dashboard_routes.py  lead_conversion_routes.py  user_routes.py  webhook_routes.py
backend-ai/scripts/: backup_databases.py  clean_usernames.py  create_crm_admin.py  deduplicate_by_email.py  deduplicate_by_phone.py  fix_email_typos.py  fix_inverted_fields.py  fix_specialty_as_name.py  fix_wrong_names.py  import_all_leads.py  import_elementor_leads.py  import_quick.py  merge_typeform_leads.py  migrate_to_turso.py  remove_waste_tables.py  reset_db_simple.sh  reset_db_with_admin.py  rotate_secrets.py  seed_admin_levels.py  seed_mentorados.py  seed_test_users.py  standardize_usernames.py
backend-ai/tests/: conftest.py
backend-ai/tools/: __init__.py  agentfs_tools.py  chat_tools.py  diagnosis_tools.py  sql_tools.py  visualization_tools.py
(+72 files in other folders)
